Fix: navigation buttosn did appear in wron position on mobile device

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@ html,
 body {
   height: 100%;
   margin: auto;
+  display: flex;
 }
 
 /* 1. Use a more-intuitive box-sizing model */
